--- a/week12.ioc
+++ b/week12.ioc
@@ -71,8 +71,8 @@ PB3.Mode=Full_Duplex_Master
 ADC1.ScanConvMode=ENABLE
 PC13-ANTI_TAMP.Signal=GPXTI13
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.2
-MxDb.Version=DB.6.0.10
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+MxDb.Version=DB.6.0.21
 PB4.Mode=Full_Duplex_Master
 ProjectManager.BackupPrevious=false
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
@@ -167,7 +167,7 @@ ProjectManager.LastFirmware=true
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 RCC.APB2Freq_Value=100000000
 SPI3.CalculateBaudRate=12.5 MBits/s
-MxCube.Version=6.1.0
+MxCube.Version=6.2.1
 SH.ADCx_IN0.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 VP_SYS_VS_Systick.Mode=SysTick
@@ -232,3 +232,4 @@ RCC.APB1Freq_Value=50000000
 ProjectManager.DeviceId=STM32F411RETx
 ProjectManager.LibraryCopy=1
 PA3.GPIO_Label=USART_RX
+isbadioc=false
