--- a/week12.ioc
+++ b/week12.ioc
@@ -172,7 +172,7 @@ SH.ADCx_IN0.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=100000000
-TIM3.IPParameters=Prescaler,Period
+TIM3.IPParameters=Prescaler,Period,TIM_MasterOutputTrigger
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 ADC1.DMAContinuousRequests=ENABLE
@@ -228,6 +228,7 @@ RCC.PLLM=8
 RCC.PLLN=100
 Mcu.Pin10=PC7
 PA2.Mode=Asynchronous
+TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 RCC.APB1Freq_Value=50000000
 ProjectManager.DeviceId=STM32F411RETx
 ProjectManager.LibraryCopy=1
